# bevy_gamejame5

./: .gitignore  Cargo.toml  Trunk.toml  _Trunk.toml  bug_list.txt  flake.nix  index.html  thoughts.txt
src/: animation.rs  camera.rs  cursor.rs  helpers.rs  lib.rs  main.rs  names.rs  splash_screan.rs
src/body/: living_things.rs  mod.rs
src/controles/: mod.rs
src/domains/: editer.rs  mod.rs  save.rs  tile_picker.rs  wfc.rs
src/game/: body_selection.rs  difficulty.rs  mod.rs  soul_selection.rs  wave.rs
src/game/gui/: hit_points_dysplay.rs  mod.rs  time_dysplay.rs
src/menus/: main_menu.rs  mod.rs
src/mob/: mob_type.rs  mod.rs  spawner.rs
src/player/: mod.rs
src/player/body/: body_type.rs  hit_points.rs  mod.rs
src/player/skill/: mod.rs  spawner.rs
src/player/skill/effect/: duration.rs  mod.rs  skill_effect_type.rs  spawner.rs  texture.rs
src/player/soul/: mod.rs
src/soul/: failings.rs  gender.rs  mod.rs  personality.rs
src/soul/personality_traits/: mod.rs  negative.rs  positive.rs
