[package]
name = "bevy_gamejame5"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { package = "bevy", version = "0.14.0" }
bevy_asset_loader = "0.21.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy/dynamic_linking", "bevy/wayland"]
