[package]
name = "bevy_gamejame5"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bevy = { package = "bevy", version = "0.14.0" }
bevy_asset_loader = {version  = "0.21.0", features  = ["2d"]}
bevy_ecs_tilemap = "0.14.0"
strum = { version = "0.26", features = ["derive"] }
rand = "*"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy/dynamic_linking", "bevy/wayland"]
